# variable_qmin

./: .gitignore  README.md  plor_result_plus_condprior.ipynb  pyproject.toml  setup.cfg  test_prior_likelihoods.ipynb  test_smoothing.ipynb
inference/: GWevents.txt  O1O2O3-PLPP-rename.ini  O1O2O3-PLPP-smoothing-no190814.ini  O1O2O3-PLPP.ini  O1O2O3-variablem2min-gammazetacond-no190814-pqnorm-nospin.ini  O1O2O3-variablem2min-gammazetacond-no190814-pqnorm.ini  O1O2O3-variablem2min-gammazetacond-no190814-pqnorm_cachetest.ini  O1O2O3-variablem2min-gammazetacond-no190814-smoothing.ini  O1O2O3-variablem2min-gammazetacond-no190814.ini  O1O2O3-variablem2min-gammazetacond-pqnorm.ini  O1O2O3-variablem2min-gammazetacond-spinredshift.ini  O1O2O3-variablem2min-gammazetacond.ini  O1O2O3-variablem2min-zetacond.ini  O1O2O3-variablem2min_PLprod.ini  O1O2O3-variablem2min_PLprod_fewevents-no190814.ini  O1O2O3-variablem2min_PLprod_fewevents.ini  O1O2O3-variablem2min_PLprod_pqnorm.ini  O1O2O3-variablem2min_PLprod_pqnorm_no190814.ini  O1O2O3-variablem2min_PLprod_smoothing_no190814.ini  O1O2O3-variablem2min_parabolaprod.ini  O1O2O3_PLPP_result.ipynb  O1O2O3_result_compare_pqnorm.ipynb  O1O2O3_result_comparison_prod.ipynb  O1O2O3_result_comparison_prod_smoothing.ipynb  O4a-variablem2min-cond.prior  O4a-variablem2min-zetacond.ini  O4a-variablem2min.ini  O4a-variablem2min.prior  O4a-variablem2min_PLprod.ini  O4a_allgammazeta_parabola.ipynb  PLPP.prior  load_event_posteriors.py  parabolam2min-zetagammacond.prior  prior_to_json.ipynb
parabola_prior_percentiles/: 5th_percentile.npy  (+2 more)
(+625 files in other folders)
