[metadata]
name = variable_qmin
description = Variable qmin model to use with gwpopulation
url = https://github.com/scolloms/variable_qmin
author = Storm Colloms
author_email = s.colloms.1@research.gla.ac.uk
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
python_requires = ">=3.8"

[options]
packages = find:
install_requires = file: requirements.txt

[options.extras_require]
cupy = cupy
jax =
  jax
  jaxlib
pages = file: pages_requirements.txt
test = file: test_requirements.txt

[options.packages.find]
exclude =
    test
    venv

[flake8]
exclude = .git,build,dist,docs,test,*__init__.py
max-line-length = 120
ignore = E129 W503

[tool:pytest]
